Fixed background color issues introduced with color schemes and added dark mode toggle switch to home page

--- a/client/src/app/design/design.component.scss
+++ b/client/src/app/design/design.component.scss
@@ -1,6 +1,6 @@
 div.menu {
-    margin-left: 8px;
-    margin-top: 8px;
+    padding-left: 8px;
+    padding-top: 8px;
 }
 
 div.main {
