--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -27,6 +27,14 @@ span.backdropItem {
     border-radius: 18px;
 }
 
+div.darkMode {
+    padding: 10px;
+}
+
+span.label {
+    margin-right: 10px;
+}
+
 nav {
 
     ul {
