--- a/client/src/app/play/play.component.scss
+++ b/client/src/app/play/play.component.scss
@@ -1,6 +1,7 @@
 .menu {
     float: left;
     width: 142px;
+    padding-top: 8px;
     margin-left: 8px;
 }
 
@@ -8,22 +9,22 @@
     /* These calculations assume the board is at least as wide as it is tall */
 
     /* Ensure the full board stays on the page */
-    max-width: min(100vh - 16px, 100vw - 150px);
+    max-width: min(100vh - 18px, 100vw - 150px);
     /* Always leave room for the menu, but go in the center if possible */
-    margin-left: max(150px, (100% - min(100vh - 16px, 100% - 150px)) / 2);
+    margin-left: max(150px, (100% - min(100vh - 18px, 100% - 150px)) / 2);
 
-    margin-top: 8px;
-    margin-bottom: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 
     border-left: 2px solid var(--gameBorder);
     border-right: 2px solid var(--gameBorder);
-    background-color: var(--centerBackdrop);
 
     display: flex;
 }
 
 .column {
     display: inline-block;
+    background-color: var(--centerBackdrop);
     border-top: 2px solid var(--gameBorder);
     border-bottom: 2px solid var(--gameBorder);
     flex-grow: 1;
